# make-demo

./: .gitignore  .gitmodules  CMakeLists.txt  _build.sh  _clean.sh
axgl/: CMakeLists.txt
axgl-demo/: CMakeLists.txt
axgl-demo/src/: game.h  main.cpp
axgl/include/axgl/: gameloop.h  window.h
axgl/src/: gameloop.cpp  window.cpp
main/: CMakeLists.txt
network/: CMakeLists.txt
network-demo/client/: CMakeLists.txt
network-demo/client/src/: main.cpp
network-demo/server/: CMakeLists.txt
network-demo/server/src/: main.cpp
network/include/net/: client.h  connection.h  message_queue.h  server.h
network/src/: client.cpp  connection.cpp  server.cpp
playground/: CMakeLists.txt
playground/src/: main.cpp
proto/: CMakeLists.txt
proto/src/: vec2.proto
scripts/: build.sh  clean.sh
src/: main.cpp
